--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,5 +5,14 @@
     "target": "es2019",
     "esModuleInterop": true,
     "sourceMap": true,
-  }
+    "rootDir": "src",
+    "baseUrl": "src",
+    "paths": {
+      "@/*": ["*"]
+    }
+  },
+  "include": [
+    "src"
+  ],
+  "exclude": []
 }
