--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node dist/main/server.js",
-    "debug": "nodemon -L --watch ./dist --inspect=0.0.0.0:9222 --nolazy ./dist/main/server.js",
+    "debug": "npx nodemon -L --watch ./dist --inspect=0.0.0.0:9222 --nolazy dist/main/server.js",
     "build": "rimraf dist && tsc -p tsconfig-build.json",
     "build:watch": "rimraf dist && tsc -p tsconfig-build.json -w",
     "postbuild": "copyfiles -u 1 public/**/* dist/static",
@@ -44,7 +44,6 @@
     "jest": "^26.4.1",
     "lint-staged": "^10.2.11",
     "rimraf": "^3.0.2",
-    "sucrase": "^3.15.0",
     "supertest": "^4.0.2",
     "ts-jest": "^26.2.0",
     "typescript": "^4.0.2"
@@ -55,7 +54,6 @@
     "jsonwebtoken": "^8.5.1",
     "module-alias": "^2.2.2",
     "mongodb": "^3.6.0",
-    "nodemon": "^2.0.6",
     "validator": "^13.1.1"
   },
   "engines": {
