--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/validator": "^13.1.2",
     "@typescript-eslint/eslint-plugin": "^3.10.1",
     "copyfiles": "^2.4.1",
+    "coveralls": "^3.1.0",
     "eslint": "^7.16.0",
     "eslint-config-standard-with-typescript": "^18.0.2",
     "eslint-plugin-import": "^2.22.1",
