--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "clean-node",
   "version": "2.1.0",
-  "description": "",
-  "main": "index.js",
+  "description": "NodeJs Rest API and GraphQL using TDD, Clean Architecture, Typescript and Design Patterns",
   "scripts": {
     "start": "node dist/main/server.js",
     "debug": "nodemon -L --watch ./dist --inspect=0.0.0.0:9222 --nolazy ./dist/main/server.js",
@@ -19,7 +18,6 @@
     "test:ci": "npm test -- --coverage",
     "test:coveralls": "npm run test:ci && coveralls < coverage/lcov.info"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
@@ -31,6 +29,7 @@
     "@types/mongodb": "^3.6.3",
     "@types/node": "^14.14.16",
     "@types/supertest": "^2.0.10",
+    "@types/swagger-ui-express": "^4.1.2",
     "@types/validator": "^13.1.2",
     "@typescript-eslint/eslint-plugin": "^3.10.1",
     "copyfiles": "^2.4.1",
@@ -57,6 +56,7 @@
     "jsonwebtoken": "^8.5.1",
     "module-alias": "^2.2.2",
     "mongodb": "^3.6.3",
+    "swagger-ui-express": "^4.1.6",
     "validator": "^13.5.2"
   },
   "engines": {
